whitespace fix on stylesheet

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,14 +3,14 @@
     position:absolute;
     right:0;
   }
-  .navbar-brand {
+  body .navbar-brand {
     position:absolute;
     left:0;
     margin-left:15px;
   }
   .wrapper {
     max-width:100%;
-    margin-right:15px;
+    /* margin-right:15px; */
     padding:0;
   }
 }
@@ -21,6 +21,10 @@
     margin-left:5px;
     margin-bottom:15px;
     padding-left:0;
+  }
+  body .wrapper {
+      max-width:100%;
+      padding:0;
   }
 }
 
@@ -318,7 +322,7 @@ h4 {
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus {   
+textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus {
     border-color: rgba(255, 255, 255, 3);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px rgba(42, 54, 59, 3);
     outline: 0 none;
@@ -373,12 +377,12 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
     max-width:240px;
     max-height:40px;
     overflow:hidden;
-    border-radius:0; 
+    border-radius:0;
 }
 
 .panel-img{
     height:40px;
     width:40px;
     margin-right:-4px;
-    border-radius:0; 
+    border-radius:0;
 }
